# src/modules/articles/useCases/update/updateArticlesController.ts
@@ -5,12 +5,13 @@ import { UpdateArticlesUseCase } from "./updateArticlesUseCase";
 class UpdateArticlesController {
     async handle(request: Request, response: Response): Promise<Response> {
         const { id } = request.params
-        const { featured, url, newsSite, summary, publishedAt, launches_id, events_id } = request.body;
+        const { title, featured, url, newsSite, summary, publishedAt, launches_id, events_id } = request.body;
 
         const updateArticlesUseCase = container.resolve(UpdateArticlesUseCase)
 
         const article = await updateArticlesUseCase.execute({
             id,
+            title,
             featured,
             url,
             newsSite,
